# goit-pythonweb-hw-10

./: README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  test_api.py
alembic/: env.py
alembic/versions/: 35dde15b1389_create_users_table.py  c9e127f5f4ce_initial_migration.py
api/: contacts.py  users.py
repositories/: contact_repository.py  user_repository.py
schemas/: users.py
services/: auth_service.py  contact_service.py  user_service.py
